--- a/app/modules/common/views/partials/error_popup.html
+++ b/app/modules/common/views/partials/error_popup.html
@@ -12,9 +12,8 @@
                 <div class="cloud2"><img src="assets/images/login_cloud2.png"></div>
             </div>
         </header>
-          
-        <button ng-if="!confirmShow" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
-        <button ng-if="confirmShow" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
+        <button ng-if="!confirmShowButton" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
+        <button ng-if="confirmShowButton" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Confirm</button>
 
         
         </div>
