--- a/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
+++ b/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
@@ -1,18 +1,18 @@
 <section class="fadeIn dashboard goals">
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" click-redirect="/retirementGoalsStarted">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
 						<div class="image-div">
-							<img src="assets/images/retirement.png">
+							<img src="assets/images/earnhigherinterest_transparent.png">
 						</div>
 				</div>
 				<h2>Smart Deposit</h2>
 				<p class="pull-left">Higher interest than FDs, with no lock-in and low risk.</p>
 				<ul class="col-xs-12">
-					<li><p>Invest in liquid funds and earn more on your money.</p></li>
-					<li><p>No lock-in, Zero penalty on premature withdrawal</p></li>
-					<li><p>Fast 1-day withdrawal to your bank account</p></li>
+					<li><p>Invest in liquid funds and earn higher returns on your money than Fixed deposit</p></li>
+					<li><p>Withdraw anytime - No lock-in/Zero penalty</p></li>
+					<li><p>Fast 1 day withdrawal - Get your money in your bank account the next day</p></li>
 				</ul>
 			</div>
 		</div>
