--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -88,7 +88,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-				<ul class="chart-main-tabs" ng-init="setChartValue = 'SCHEME'">
+				<ul class="chart-main-tabs">
 					<li ng-click="setChartValue = 'FINANCE'" ng-class="{'activeli':setChartValue == 'FINANCE'}"><a href="javascript:void(0)">Financial Goal Status</a></li>
 					<li ng-click="setChartValue = 'SCHEME'" ng-class="{'activeli':setChartValue == 'SCHEME'}"><a href="javascript:void(0)">Scheme Details</a></li>
 					<li ng-click="setChartValue = 'TRANSACTION'" ng-class="{'activeli':setChartValue == 'TRANSACTION'}"><a href="javascript:void(0)">Transaction History</a></li>
