--- a/less/table.less
+++ b/less/table.less
@@ -485,6 +485,18 @@
 			}
 		}
 	}
+	&.table-full-width{
+		width:100%;
+		h3{
+			font-family: 'PlayfairDisplay-Regular';
+		    color: #000;
+		    font-weight: normal;
+		    font-size: 1.125em;
+		    opacity: 0.5;
+		    margin-top: 0px;
+		    margin-bottom: 20px;
+		}
+	}
 }
 .table-seperate{
 	width: 95%;
