--- a/app/modules/common/views/partials/confirmText.html
+++ b/app/modules/common/views/partials/confirmText.html
@@ -14,7 +14,10 @@
             </div>
         </header>
           
-           <button class="fin-app-btn fin-orange" ng-click="confirmDeleteGoal(currentGoal)">Continue</button>
+       <!-- <button class="fin-app-btn fin-orange pull-left" ng-click="confirmDeleteGoal(currentGoal)">Continue</button> -->
+       <button class="fin-app-btn fin-orange pull-left" ng-click="confirm()">Confirm</button>
+       <button class="fin-app-btn fin-orange pull-right" ng-click="ngDialog.close()">Cancel</button>
+
 </div>
        </div>
 
