Modified transaction status UI

--- a/app/modules/investwithdraw/views/investmentReturn.html
+++ b/app/modules/investwithdraw/views/investmentReturn.html
@@ -26,14 +26,14 @@
 				 	</div>
 				 	<div class="tr">
 					 	<div class="td col-xs-5 no-padding">
-					 		<p>API Status</p>
+					 		<p>Transaction Status</p>
 					 	</div>
 					 	<div class="td">
 					 		<p class="">{{apiStatus}}</p>
 					 	</div>
 
 				 	</div>
-				 	<div class="tr">
+<!-- 				 	<div class="tr">
 					 	<div class="td col-xs-5 no-padding">
 					 		<p class="">Authentication Status</p>
 					 	</div>
@@ -41,10 +41,10 @@
 					 		<p class="">{{auth_status}}</p>
 					 	</div>
 
-				 	</div>
+				 	</div> -->
 				 	<div class="tr">
 					 	<div class="td col-xs-5 no-padding">
-					 		<p class="">Order Id</p>
+					 		<p class="">Transaction Id</p>
 					 	</div>
 					 	<div class="td">
 					 		<p class="">{{order_id}}</p>
