--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -56,7 +56,7 @@
 					<div class="image-div">
 						<img src="assets/images/dashboardImage4.png">
 					</div>
-					<div class="checkbox-cover" ng-if="user_flags.is_real_seen">
+					<div class="checkbox-cover" ng-if="!user_flags.is_virtual">
 						<input type="radio" name>
 						<label><span></span></label>
 					</div>
@@ -66,7 +66,7 @@
 					<div class="image-div">
 						<img src="assets/images/dashboardImage4.png">
 					</div>
-					<div class="checkbox-cover" ng-if="!user_flags.is_virtual">
+					<div class="checkbox-cover">
 						<input type="radio" name>
 						<label><span></span></label>
 					</div>
@@ -76,7 +76,8 @@
 				<!-- <h3 class="text-center">Your financial goals are</h3>
 				<p class="text-center score text-score" ng-if="dashCounts['trackPerform']">on track</p>
 				<p class="text-center score text-score" ng-if="!dashCounts['trackPerform']">off track</p> -->
-				<h4 class="text-center" ng-if="!user_flags.is_virtual">You don't have a smart portfolio yet</h4>
+				<h4 class="text-center" ng-if="user_flags.is_virtual">You don't have a smart portfolio yet</h4>
+				<h4 class="text-center" ng-if="!user_flags.is_virtual">You have a smart portfolio</h4>
 			</div>
 		</div>
 	</div>
