--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -357,6 +357,7 @@ section{
 					    font-size: 1.125em;
 					    margin-top: 0;
 					    margin-bottom: 0px;
+					    cursor: pointer;
 					}
 					.transactionEach {
 						background-color: #e6eef4;
