Google Login refactored to work with Gooogle Signin button in registration screen

--- a/app/modules/authentication/views/confirmMergeLogin.html
+++ b/app/modules/authentication/views/confirmMergeLogin.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="login-btn-group">
-				<button class="fin-app-btn fin-white pull-left" ng-click="cancelAccountMerge()">CANCEL MERGE</button>
+				<button class="fin-app-btn fin-white pull-left" ng-click="cancelGoogleAccountMerge()">CANCEL MERGE</button>
 				<button class="fin-app-btn fin-orange pull-right" ng-click="mergeAccounts(user)">LOGIN</button>
 			</div>
 		</form>
