--- a/app/modules/registration/views/register.html
+++ b/app/modules/registration/views/register.html
@@ -51,7 +51,7 @@
 	      				<div class="register-btn-group">
 							<button class="fin-app-btn fin-orange" ng-click="userRegister(register)" ng-disabled="registerForm.$invalid">REGISTER NOW</button>
 							<span class="or">OR</span>
-							<button class="fin-app-btn fin-signIn"><span class="sign-img"><img src="assets/images/gSignIn.png"></span><span>SIGN IN WITH GOOGLE</span></button>
+							<button class="fin-app-btn fin-signIn" ng-click="googleSignIn()"><span class="sign-img"><img src="assets/images/gSignIn.png"></span><span>SIGN IN WITH GOOGLE</span></button>
 						</div>
 	      			</form>
 					<ul class="login-dialog">
