--- a/app/modules/authentication/views/confirmMerge.html
+++ b/app/modules/authentication/views/confirmMerge.html
@@ -14,8 +14,8 @@
             </div>
         </header>
           
-           <button class="fin-app-btn fin-white pull-left" ng-click="cancelAccountMerge()">Cancel</button>
-           <button class="fin-app-btn fin-orange pull-right" ng-click="confirmAccountMerge()">Continue</button>
+           <button class="fin-app-btn fin-white pull-left" ng-click="cancelGoogleAccountMerge()">Cancel</button>
+           <button class="fin-app-btn fin-orange pull-right" ng-click="confirmGoogleAccountMerge()">Continue</button>
 </div>
        </div>
 
