--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -58,10 +58,10 @@
 				<div class="form-group">
 					<input only-number type="number" name="email" ng-model="otp.sms_code" required>
 					<label>OTP</label>
-					<button ng-click="resendOtp()" class="resendOtp pull-right"><span class="resend-icon"></span>RESEND OTP</button>
+					<button ng-click="googleRegisterResendOtp()" class="resendOtp pull-right"><span class="resend-icon"></span>RESEND OTP</button>
 				</div>
 				<div class="login-btn-group">
-					<button ng-disabled="otpForm.$invalid" class="fin-app-btn fin-orange full-width" ng-click="confirmOtp(otp)">COMPLETE REGISTRATION</button>
+					<button ng-disabled="otpForm.$invalid" class="fin-app-btn fin-orange full-width" ng-click="googleRegisterConfirmOtp(otp)">COMPLETE REGISTRATION</button>
 				</div>
 				<p class="verify-email pull-left">Facing OTP issues?<span class="nextline redirect" ng-click="completeGoogleLogin()">Verify Later</span></p>
 				<div class="form-error" ng-if="errorOtp"><p ng-bind="errorOtp"></p></div>
