--- a/app/modules/goals/modules/others/views/othersStarted.html
+++ b/app/modules/goals/modules/others/views/othersStarted.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
-                        <button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+                        <button click-redirect="goals" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
                         <button ng-disabled="quickInvestForm1.$invalid" class="fin-app-btn fin-orange" click-redirect="/others">CONTINUE</button>
                     </div>
                 </div>
