--- a/app/modules/investwithdraw/views/investStep1.html
+++ b/app/modules/investwithdraw/views/investStep1.html
@@ -55,7 +55,7 @@
 									<p>Rs.<span>{{schemes.goal_summary.sip}}</span></p>
 								</div>
 								<div class="td">
-									<p>{{schemes.goal_summary.sip}}</p>
+									<p>{{schemes.goal_summary.lumpsum}}</p>
 								</div>
 							</div>
 						</div>
