--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -89,9 +89,9 @@
 			</div>
 		</div>
 		
-		<div class="fin-btn-group">
+		<!-- <div class="fin-btn-group">
 			<button class="fin-app-btn fin-white">SEE PAST PERFORMACE OF ABOVE PORTFOLIO</button>
-		</div>
+		</div> -->
 
 	</div>
 	<div class="calculated">
@@ -124,7 +124,7 @@
 	<div class="fin-btn-group addMargin">
 	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 	    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANING</button>
-	    <button click-redirect="/investStep1" class="fin-app-btn fin-orange">INVEST AND PAY NOW</button>
+	    <button ng-click="goToInvest()" class="fin-app-btn fin-orange">INVEST AND PAY NOW</button>
 	</div>
 </section>
 
