--- a/less/login.less
+++ b/less/login.less
@@ -123,3 +123,68 @@
 		}
 	}
 }
+.account_settings {
+	h3{
+		opacity: 1 !important;
+	}
+	.acc_detail {
+		font-size: 17px !important;
+	  	font-family: "PlayfairDisplay";
+	  	color: rgb( 0, 0, 0 );
+	  	line-height: 1.5;
+	  	opacity: 0.6;
+
+	}
+	.acc_detail_value {
+
+	}
+	.checkedList{
+
+	    margin-right: 12px;
+	    float: right;
+	    width: 30px;
+	    height: 30px;
+	    border: 2px solid #046baa;
+	    -webkit-border-radius: 100%;
+	    -moz-border-radius: 100%;
+	    border-radius: 100%;
+	    position: relative;
+	    top: 10px;
+	    display: table;
+
+		.image-div{
+		    display: table-cell;
+		    vertical-align: middle;
+		    text-align: center;
+		    padding: 0;
+		    img{
+		    	width: 60%;
+		    }
+		}
+	}
+	.verified{
+		color: #046baa;
+	    top: 15px;
+    	position: relative;
+    	width: 72px;
+	}
+	.not-verified{
+		color: #f26529;
+		top: 15px;
+    	position: relative;
+    	width: 72px;
+    	cursor: pointer;
+	}
+	.edit-settings{
+		color: #f26529;
+		cursor: pointer;
+	}
+}
+.settings_wrapper{
+	.login_form{
+		width: 100%;
+    	float: left;
+    	padding-top: 14%;
+	}
+	
+}
