--- a/app/modules/smartportfolio/views/schemeComparision.html
+++ b/app/modules/smartportfolio/views/schemeComparision.html
@@ -1,15 +1,9 @@
 <section class="compareSchemes">
-	<div class="col-xs-5 schemes-cover">
-		<div class="schemes-inner col-xs-12">
-			<div class="col-xs-2">
-				<div class="checkbox-cover">
-					<input type="checkbox" id="scheme1">
-					<label for="scheme1"><span></span></label>
-				</div>
-			</div>
-			<div class="col-xs-10">
-				<h2>Franklin India</h2>
-				<h3>Large Cap</h3>
+	<div class="col-xs-5 schemes-cover mCustomScrollbar">
+		<div class="schemes-inner col-xs-12" ng-repeat="schemes in $root.schemeCompareAfter.compared_fund">
+			<div class="col-xs-12">
+				<h2>{{schemes.fund_name}}</h2>
+				<h3>{{schemes.category_name}}</h3>
 				<div class="list-details">
 					<div class="table schemeCompareTable">
 						<div class="thead">
@@ -28,97 +22,13 @@
 						<div class="tbody">
 							<div class="tr">
 								<div class="td">
-									<p>14.30%</p>
+									<p>{{schemes.return_five_year}}%</p>
 								</div>
 								<div class="td">
-									<p>14.30%</p>
+									<p>{{schemes.return_three_year}}%</p>
 								</div>
 								<div class="td">
-									<p>14.30%</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="schemes-inner col-xs-12">
-			<div class="col-xs-2">
-				<div class="checkbox-cover">
-					<input type="checkbox" id="scheme2">
-					<label for="scheme2"><span></span></label>
-				</div>
-			</div>
-			<div class="col-xs-10">
-				<h2>Franklin India</h2>
-				<h3>Large Cap</h3>
-				<div class="list-details">
-					<div class="table schemeCompareTable">
-						<div class="thead">
-							<div class="tr">
-								<div class="th">
-									<p>1 Year Return</p>
-								</div>
-								<div class="th">
-									<p>3 Year Return</p>
-								</div>
-								<div class="th">
-									<p>5 Year Return</p>
-								</div>
-							</div>
-						</div>
-						<div class="tbody">
-							<div class="tr">
-								<div class="td">
-									<p>14.30%</p>
-								</div>
-								<div class="td">
-									<p>14.30%</p>
-								</div>
-								<div class="td">
-									<p>14.30%</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="schemes-inner col-xs-12">
-			<div class="col-xs-2">
-				<div class="checkbox-cover">
-					<input type="checkbox" id="scheme2">
-					<label for="scheme2"><span></span></label>
-				</div>
-			</div>
-			<div class="col-xs-10">
-				<h2>Franklin India</h2>
-				<h3>Large Cap</h3>
-				<div class="list-details">
-					<div class="table schemeCompareTable">
-						<div class="thead">
-							<div class="tr">
-								<div class="th">
-									<p>1 Year Return</p>
-								</div>
-								<div class="th">
-									<p>3 Year Return</p>
-								</div>
-								<div class="th">
-									<p>5 Year Return</p>
-								</div>
-							</div>
-						</div>
-						<div class="tbody">
-							<div class="tr">
-								<div class="td">
-									<p>14.30%</p>
-								</div>
-								<div class="td">
-									<p>14.30%</p>
-								</div>
-								<div class="td">
-									<p>14.30%</p>
+									<p>{{schemes.return_five_year}}%</p>
 								</div>
 							</div>
 						</div>
@@ -127,28 +37,33 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-7 ">
+	<div class="col-xs-7">
 		<ul class="chart-main-tabs" ng-init="setChartValue = 'HISTORIC'">
 			<li ng-click="setChartValue = 'HISTORIC'" ng-class="{'activeli':setChartValue == 'HISTORIC'}"><a href="javascript:void(0)" >Historic Performance</a></li>
 			<li ng-click="setChartValue = 'OTHERS'" ng-class="{'activeli':setChartValue == 'OTHERS'}"><a href="javascript:void(0)">Other Comparison</a></li>
 		</ul>
 		<div class="chart-cover" ng-show="setChartValue == 'HISTORIC'" >
-			<ul class="chart-tabs" ng-init="setvalue='3years'">
-				<li ng-click="setvalue = '1month';"><a href="javascript:void(0)" ng-class="{'active':setvalue =='1month'}">1 month</a></li>
-				<li ng-click="setvalue = '3month'" ng-class="{'active':setvalue =='3month'}"><a href="javascript:void(0)">3 month</a></li>
-				<li ng-click="setvalue = '1year';populateGraph('one_year')" ng-class="{'active':setvalue =='1year'}"><a href="javascript:void(0)">1 year</a></li>
-				<li ng-click="setvalue = '3years';populateGraph('three_year')" ng-class="{'active':setvalue =='3years'}"><a href="javascript:void(0)">3 years</a></li>
-				<li ng-click="setvalue = '5years'" ng-class="{'active':setvalue =='5years'}"><a href="javascript:void(0)">5 years</a></li>
+			<ul class="chart-tabs" ng-init="setvalue='three_year';populateGraph($root.schemeCompareGraph, setvalue)">
+				<li ng-click="setvalue = 'one_month';populateGraph($root.schemeCompareGraph, setvalue)"><a href="javascript:void(0)" ng-class="{'active':setvalue =='one_month'}">1 month</a></li>
+
+				<li ng-click="setvalue = 'three_month';populateGraph($root.schemeCompareGraph, setvalue)" ng-class="{'active':setvalue =='three_month'}"><a href="javascript:void(0)">3 month</a></li>
+
+				<li ng-click="setvalue = 'one_year';populateGraph($root.schemeCompareGraph, setvalue)" ng-class="{'active':setvalue =='one_year'}"><a href="javascript:void(0)">1 year</a></li>
+
+				<li ng-click="setvalue = 'three_year';populateGraph($root.schemeCompareGraph, setvalue)" ng-class="{'active':setvalue =='three_year'}"><a href="javascript:void(0)">3 years</a></li>
+
+				<li ng-click="setvalue = 'five_year';populateGraph($root.schemeCompareGraph, setvalue)" ng-class="{'active':setvalue =='five_year'}"><a href="javascript:void(0)">5 years</a></li>
 			</ul>
 			<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
 			<p class="text-right"><span class="addOnlyBold">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
 		</div>	
-		<div class="chart-cover scheme-compare-other" ng-show="setChartValue == 'OTHERS'" >
-			<div class="schemes-inner col-xs-12">
+		<div class="chart-cover scheme-compare-other mCustomScrollbar" ng-show="setChartValue == 'OTHERS'" >
+		<div ng-if="$root.ifDebtSchemes">
+			<div class="schemes-inner col-xs-12" ng-repeat="schemes in $root.schemeCompareAfter.debt_other_data">
 				<div class="col-xs-12">
-					<h3 class="pull-left">SBI Bluechip Fund Regular Growth</h3>
+					<h3 class="pull-left">{{schemes.fund_name}}</h3>
 					<p class="pull-right">AUM Size
-					<span class="highlight nextline">9534 Cr</span>
+					<span class="highlight nextline">{{schemes.aum}}</span>
 					</p>
 					<div class="list-details">
 						<div class="table">
@@ -161,52 +76,48 @@
 										<p>Morning star</p>
 									</div>
 									<div class="th col-xs-4 no-padding">
-										<p>Exp Ratio</p>
+										<p>Risk</p>
 									</div>
 								</div>
 							</div>
 							<div class="tbody">
 								<div class="tr">
 									<div class="td col-xs-4 no-padding">
-										<p>1</p>
+										<p>{{schemes.fund_rank}}</p>
 									</div>
 									<div class="td col-xs-4 no-padding">
-										<p>XXXXX</p>
+										<p>{{schemes.star_rating}}</p>
 									</div>
 									<div class="td col-xs-4 no-padding">
-										<p>1.39%</p>
+										<p>{{schemes.risk}}</p>
 									</div>
 								</div>
 							</div>
 							<div class="thead">
 								<div class="tr">
-									<div class="th col-xs-3 no-padding">
-										<p>Risk</p>
+									<div class="th col-xs-4 no-padding">
+										<p>Expense Ratio</p>
 									</div>
-									<div class="th col-xs-3 no-padding">
-										<p>Sharpe Ratio</p>
+									<div class="th col-xs-4 no-padding">
+										<p>Average Maturity</p>
 									</div>
-									<div class="th col-xs-3 no-padding">
-										<p>Alpha</p>
-									</div>
-									<div class="th col-xs-3 no-padding">
-										<p>Beta</p>
+									
+									<div class="th col-xs-4 no-padding">
+										<p>Credit Quality</p>
 									</div>
 								</div>
 							</div>
 							<div class="tbody">
 								<div class="tr">
-									<div class="td col-xs-3 no-padding">
-										<p>MS Risk</p>
+								<div class="td col-xs-4 no-padding">
+										<p>{{schemes['expense_ratio']}}</p>
 									</div>
-									<div class="td col-xs-3 no-padding">
-										<p>1.234</p>
+									<div class="td col-xs-4 no-padding">
+										<p>{{schemes['Average Maturity']}}%</p>
 									</div>
-									<div class="td col-xs-3 no-padding">
-										<p>0.23</p>
-									</div>
-									<div class="td col-xs-3 no-padding">
-										<p>0.37</p>
+									
+									<div class="td col-xs-4 no-padding">
+										<p>{{schemes['Credit Quality']}}</p>
 									</div>
 								</div>
 							</div>
@@ -214,11 +125,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="schemes-inner col-xs-12">
+			</div>
+			<div ng-if="$root.ifEquitySchemes">
+			<div class="schemes-inner col-xs-12" ng-repeat="schemes in $root.schemeCompareAfter.equity_other_data">
 				<div class="col-xs-12">
-					<h3 class="pull-left">SBI Bluechip Fund Regular Growth</h3>
+					<h3 class="pull-left">{{schemes.fund_name}}</h3>
 					<p class="pull-right">AUM Size
-					<span class="highlight nextline">9534 Cr</span>
+					<span class="highlight nextline">{{schemes.aum}}</span>
 					</p>
 					<div class="list-details">
 						<div class="table">
@@ -231,58 +144,47 @@
 										<p>Morning star</p>
 									</div>
 									<div class="th col-xs-4 no-padding">
-										<p>Exp Ratio</p>
+										<p>Risk</p>
 									</div>
 								</div>
 							</div>
 							<div class="tbody">
 								<div class="tr">
 									<div class="td col-xs-4 no-padding">
-										<p>1</p>
+										<p>{{schemes.fund_rank}}</p>
 									</div>
 									<div class="td col-xs-4 no-padding">
-										<p>XXXXX</p>
+										<p>{{schemes.star_rating}}</p>
 									</div>
 									<div class="td col-xs-4 no-padding">
-										<p>1.39%</p>
+										<p>{{schemes.risk}}</p>
 									</div>
 								</div>
 							</div>
 							<div class="thead">
 								<div class="tr">
-									<div class="th col-xs-3 no-padding">
-										<p>Risk</p>
+									<div class="th col-xs-4 no-padding">
+										<p>Expense_ratio</p>
 									</div>
-									<div class="th col-xs-3 no-padding">
-										<p>Sharpe Ratio</p>
-									</div>
-									<div class="th col-xs-3 no-padding">
-										<p>Alpha</p>
-									</div>
-									<div class="th col-xs-3 no-padding">
+									<div class="th col-xs-4 no-padding">
 										<p>Beta</p>
 									</div>
 								</div>
 							</div>
 							<div class="tbody">
 								<div class="tr">
-									<div class="td col-xs-3 no-padding">
-										<p>MS Risk</p>
+									<div class="td col-xs-4 no-padding">
+										<p>{{schemes.expense_ratio}}</p>
 									</div>
-									<div class="td col-xs-3 no-padding">
-										<p>1.234</p>
-									</div>
-									<div class="td col-xs-3 no-padding">
-										<p>0.23</p>
-									</div>
-									<div class="td col-xs-3 no-padding">
-										<p>0.37</p>
+									<div class="td col-xs-4 no-padding">
+										<p>{{schemes.beta}}</p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
 			</div>
 		</div>	
 	</div>
