--- a/less/modal.less
+++ b/less/modal.less
@@ -162,8 +162,8 @@
     outline: 0;
    
    
-    		.erorr-popup-wrapper {
-    			    float: left;
+.erorr-popup-wrapper {
+    float: left;
     width: 100%;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
@@ -185,28 +185,76 @@
     	}
     	.cloud2{
     		    bottom: -30%;
-    left: 0;
-    right: 0;
-    margin: auto;
+			    left: 0;
+			    right: 0;
+			    margin: auto;
     	}
     	.cloud2, .cloud1 {
-			       position: absolute;
-    		width: 20%;
+		       position: absolute;
+    			width: 20%;
 
     	}
     	.plane{
     		width: 38%;
     	}
     	p{
-    		    font-family: 'PlayfairDisplay-Regular';
-    color: #101010;
-    font-weight: normal;
-    font-size: 1.5em;
-    margin-left: 10%;
-    margin-top: 9%;
-    	}
+		    font-family: 'PlayfairDisplay-Regular';
+		    color: #101010;
+		    font-weight: normal;
+		    font-size: 1.5em;
+		    margin-left: 10%;
+		    margin-top: 9%;
+		}
     }
-				}
+}
+.settings_wrapper{
+	.login-form{
+		margin-top: 45px;
+	    width: 100%;
+	    float: left;
+	    .form-group {
+	    	label{
+	    	
+	    	    
+			    pointer-events: none;
+			    /* top: -4px; */
+			    font-family: 'PlayfairDisplay-Regular';
+			    color: #247abc;
+			    font-weight: normal;
+			    font-size: 1.5em;
+			    /* -webkit-transition: all 0.2s ease; */
+			    -o-transition: all 0.2s ease;
+			    -moz-transition: all 0.2s ease;
+			    /* transition: all 0.2s ease; */
+			    opacity: 0.6;
+			    letter-spacing: 0px;
+	    	}
+	    	span.normal{
+	    		color: #dad6d6!important;
+	    		float: left;
+	    	}
+	    	span.without-error{
+	    		position: relative!important;
+			    width: 100%!important;
+			    float: left;
+			    color: #dad6d6;
+	    	}
+	    	span.error-text{
+    		    position: relative!important;
+			    color: #f24965;
+			    width: 100%!important;
+			    float: left;
+	    	}
+	    }
+
+
+	    
+	    .form-group:nth-child(2){
+	    	margin-bottom: 6%;
+	    }
+	}
+}
+
     		}
 	}
 	
