--- a/less/registerInvestor.less
+++ b/less/registerInvestor.less
@@ -7,7 +7,10 @@ section{
 		}
 		.reviewList {
 			p{
-				color: #046baa;
+			    color: #046baa;
+			    font-size: 14px;
+			    cursor: pointer;
+			    font-family: 'PlayfairDisplay-Regular';  
 			}
 		}
 		.documents-outer-cover{
